# refbox

./: .gitignore  README.md  local_setup.sh  setup.sh
catkin_ws/: start.sh
catkin_ws/devel/: .catkin  .rosinstall
catkin_ws/devel/include/refbox_comm/: RefboxData.h  RefboxMsg.h
catkin_ws/devel/include/refbox_protobuf_msgs/: AgentTask.pb.cc  AgentTask.pb.h  AttentionMessage.pb.cc  AttentionMessage.pb.h  BeaconSignal.pb.cc  BeaconSignal.pb.h  ExplorationInfo.pb.cc  ExplorationInfo.pb.h  GameInfo.pb.cc  GameInfo.pb.h  GameState.pb.cc  GameState.pb.h  MachineCommands.pb.cc  MachineCommands.pb.h  MachineDescription.pb.cc  MachineDescription.pb.h  MachineInfo.pb.cc  MachineInfo.pb.h  MachineInstructions.pb.cc  MachineInstructions.pb.h  MachineReport.pb.cc  MachineReport.pb.h  NavigationChallenge.pb.cc  NavigationChallenge.pb.h  OrderInfo.pb.cc  OrderInfo.pb.h  Pose2D.pb.cc  Pose2D.pb.h  ProductColor.pb.cc  ProductColor.pb.h  RingInfo.pb.cc  RingInfo.pb.h  RobotCommands.pb.cc  RobotCommands.pb.h  RobotInfo.pb.cc  RobotInfo.pb.h  SimTimeSync.pb.cc  SimTimeSync.pb.h  Team.pb.cc  Team.pb.h  (+8 more)
catkin_ws/devel/include/simulator/: ActionPlanner.h  ActionPlannerFindObject.h  ActionPlannerManipulator.h  CFRParams.h  ClearKDB.h  ClearKDBRequest.h  ClearKDBResponse.h  FindObject.h  InitKDB.h  InitKDBRequest.h  InitKDBResponse.h  Laser_values.h  MotionPlanner.h  NaturalLanguage.h  Parameters.h  PlanningCFR.h  PlanningCmdClips.h  PlanningCmdSend.h  PosesArray.h  QueryKDB.h  QueryKDBRequest.h  QueryKDBResponse.h  RecognizedSpeech.h  RepeatedSentence.h  ResetKDB.h  ResetKDBRequest.h  ResetKDBResponse.h  SinglePlan.h  SpeechGeneration.h  planning_cmd.h  planning_cmdRequest.h  planning_cmdResponse.h  poseCustom.h  simulator_MoveRealRobot.h  simulator_MoveRealRobotRequest.h  simulator_MoveRealRobotResponse.h  simulator_action_planner.h  simulator_action_plannerRequest.h  simulator_action_plannerResponse.h  simulator_algorithm_result.h  (+35 more)
catkin_ws/devel/include/tug_profiling/: StatisticsPrinterConfig.h
catkin_ws/devel/include/tug_protobuf_example_msg/: example_msg.pb.cc  example_msg.pb.h
catkin_ws/devel/lib/pkgconfig/: protobuf_comm.pc  refbox_comm.pc  refbox_protobuf_msgs.pc  simulator.pc  tug_auto_bag.pc  tug_bresenham.pc  tug_cfg.pc  tug_devel_utils.pc  tug_joy.pc  tug_laser_filters.pc  tug_plugin_manager.pc  tug_profiling.pc  tug_protobuf.pc  tug_protobuf_cpp_example.pc  tug_protobuf_example_msg.pc  tug_protobuf_python_example.pc  tug_pull_subscriber.pc  tug_python_utils.pc  tug_testing.pc  tug_time.pc  tug_yaml.pc
catkin_ws/devel/lib/simulator/: base_node  (+15 more)
catkin_ws/src/RefBoxComm/simulator/: .gitignore  CMakeLists.txt  package.xml
catkin_ws/src/RefBoxComm/simulator/msg/: .gitignore  ActionPlannerManipulator.msg  FindObject.msg  MotionPlanner.msg  SinglePlan.msg
catkin_ws/src/RefBoxComm/simulator/src/: .gitignore
catkin_ws/src/RefBoxComm/simulator/src/action_planner/: action_planner.h  action_planner_node.cpp
catkin_ws/src/RefBoxComm/simulator/src/action_planner/ViRBot_Cubes_ROS/: ROS_virbot.clp  cubes_stacks_original.clp  exe_plan.clp  initial_state.txt  planning_cubes.clp  planning_objects.clp  ros_clips.clp  virbot_initial_state_blocks.txt  write_objects.clp
catkin_ws/src/RefBoxComm/simulator/src/bridge/src/: clips_bridge.cpp
catkin_ws/src/RefBoxComm/simulator/src/data/Lab/: Lab.top  Lab.wrl
catkin_ws/src/RefBoxComm/simulator/src/data/final/: final.top  final.wrl
catkin_ws/src/RefBoxComm/simulator/src/data/logistics/: logistics.top  logistics.wrl
catkin_ws/src/RefBoxComm/simulator/src/data/objects/: objects.txt  objects_1.txt  objects_blocks.txt  objects_final.txt
catkin_ws/src/RefBoxComm/simulator/src/data/random_11/: random_11 (another copy).top  random_11 (copy).top
catkin_ws/src/RefBoxComm/simulator/src/gui/: .gitignore  MobileRobotSimulator.py  MobileRobotSimulator27.py  MobileRobotSimulator3x.py  sn27.py  sn3x.py  worldmap.py
catkin_ws/src/RefBoxComm/simulator/src/launch/: .gitignore  simulator.launch
catkin_ws/src/RefBoxComm/simulator/src/logistics/: logistics.clp  messages.txt  planing.clp
catkin_ws/src/RefBoxComm/simulator/src/motion_planner/: motion_planner_node.cpp  motion_planner_utilities.h  old_action_planner_node.cpp
catkin_ws/src/RefBoxComm/simulator/src/natural_language/: natural_language_node.cpp
catkin_ws/src/RefBoxComm/simulator/src/rosclips/: CMakeLists.txt  bridge.cpp  bridge.h  main.cpp  queryrouter.cpp  queryrouter.h  userfuncs.cpp  userfuncs.h
catkin_ws/src/RefBoxComm/simulator/src/simrep/: SimuladorRepresentation.cpp  SimuladorRepresentation.h
catkin_ws/src/RefBoxComm/simulator/src/simulator_physics/: find_obj_node.cpp  laser_node.cpp  light_node.cpp  manipulator_node.cpp  prb_failure_actions.h  random_simulation.h
catkin_ws/src/RefBoxComm/simulator/src/speech_generation/: .gitignore  readme.txt  speech_generation_node  speech_generation_node.cpp
catkin_ws/src/RefBoxComm/simulator/src/state_machines/: sm_avoidance_destination.h
catkin_ws/src/RefBoxComm/simulator/src/utilities/: simulator_structures.h
catkin_ws/src/RefBoxComm/simulator/srv/: .gitignore  InitKDB.srv  simulator_action_planner.srv
catkin_ws/src/RefBoxComm/utils/tug_cfg/: CMakeLists.txt
catkin_ws/src/RefBoxComm/utils/tug_cfg/include/tug_cfg/: collection.h  configuration.h  default_constrainer.h  error_handler.h  forwards.h  key.h  log_error_handler.h  object.h  ros_dynamic_config_describer.h  ros_dynamic_config_reader.h  ros_dynamic_config_server.h  ros_dynamic_config_writer.h  ros_param_reader.h  scalar.h  struct.h  type.h  visitor.h  yaml_reader.h
catkin_ws/src/RefBoxComm/utils/tug_cfg/python_src/tug_cfg/: cpp.py  loader.py  model.py
catkin_ws/src/RefBoxComm/utils/tug_cfg/src/: collection.cpp  configuration.cpp  default_constrainer.cpp  error_handler.cpp  key.cpp  log_error_handler.cpp  ros_dynamic_config_describer.cpp  ros_dynamic_config_reader.cpp  ros_dynamic_config_server.cpp  ros_dynamic_config_writer.cpp  ros_param_reader.cpp  struct.cpp  yaml_reader.cpp
compose_files/: refbox.yaml  simulator.yaml
config/refbox/mps/: caros_mps.yaml
(+358 files in other folders)
